@@ -43,7 +43,7 @@
             "DBI" : "1.627",
             "File::Spec::Functions" : "0",
             "File::Temp" : "0",
-            "Mojolicious" : "6.14",
+            "Mojolicious" : "7.15",
             "Scalar::Util" : "0",
             "URI" : "1.69",
             "URI::db" : "0.15",
@@ -65,28 +65,28 @@
    "provides" : {
       "Mojo::SQLite" : {
          "file" : "lib/Mojo/SQLite.pm",
-         "version" : "1.003"
+         "version" : "1.004"
       },
       "Mojo::SQLite::Database" : {
          "file" : "lib/Mojo/SQLite/Database.pm",
-         "version" : "1.003"
+         "version" : "1.004"
       },
       "Mojo::SQLite::Migrations" : {
          "file" : "lib/Mojo/SQLite/Migrations.pm",
-         "version" : "1.003"
+         "version" : "1.004"
       },
       "Mojo::SQLite::PubSub" : {
          "file" : "lib/Mojo/SQLite/PubSub.pm",
-         "version" : "1.003",
+         "version" : "1.004",
          "x_deprecated" : 1
       },
       "Mojo::SQLite::Results" : {
          "file" : "lib/Mojo/SQLite/Results.pm",
-         "version" : "1.003"
+         "version" : "1.004"
       },
       "Mojo::SQLite::Transaction" : {
          "file" : "lib/Mojo/SQLite/Transaction.pm",
-         "version" : "1.003"
+         "version" : "1.004"
       }
    },
    "release_status" : "stable",
@@ -102,7 +102,7 @@
       },
       "x_IRC" : "irc://irc.perl.org/#mojo"
    },
-   "version" : "1.003",
+   "version" : "1.004",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.024000"
@@ -296,7 +296,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "v1.003",
+                  "tag" : "v1.004",
                   "tag_format" : "v%v",
                   "tag_message" : "v%v"
                },
